--- a/page_begin/footer.html
+++ b/page_begin/footer.html
@@ -3,10 +3,11 @@
     <small>Built with <a href="https://www.cnblogs.com/">cnblogs</a> •
         <a href="https://github.com/xnuc/cnblogs-theme-blogure">source</a></small>
     <label for="switch">
-        <input type="checkbox" style="position:fixed;bottom:var(--spacing);left:var(--spacing);" id="dark-switch" :class="vm.theme"
-            role="switch" @click="darkSwitcher($el)" :checked="localStorage.getItem('data-theme') === 'dark' ?? false">
+        <input type="checkbox" style="position:fixed;bottom:var(--spacing);left:var(--spacing);" id="dark-switch"
+            :class="vm.theme" role="switch" @click="darkSwitcher($el)"
+            :checked="localStorage.getItem('data-theme') === 'dark' ?? false">
     </label>
-    <template v-if="vm.main.layout === 'post'">
+    <template v-if="vm.layout === 'post'">
         <label for="switch">
             <input type="checkbox"
                 style="position:fixed;bottom:var(--spacing);right:var(--spacing);z-index:2;transform:rotate(180deg);"
