--- a/page_begin/post.html
+++ b/page_begin/post.html
@@ -1,5 +1,7 @@
 <!-- post -->
 <template id="blogure-post">
+    <!-- 阅读进度 -->
+    <progress :value="vm.post.process.val" :max="vm.post.process.max" style="position: fixed;top: 0;left: 0;border-radius: 0;"></progress>
     <!-- 标题 -->
     <h2
         style="position:relative;top:calc(var(--block-spacing-horizontal)*-3);height:var(--block-spacing-horizontal);margin-bottom:0;text-align:center;">
