--- a/page_begin/posts.html
+++ b/page_begin/posts.html
@@ -18,7 +18,7 @@
                 👁️ {{ post.desc.viewCount }}
                 💬 {{ post.desc.commentCount }}
             </div>
-            <div v-html="post.preview" v-effect="markdown_highlight('.article');"></div>
+            <div v-html="post.preview" v-effect="markdown_highlight('.article');;mermaidRender.render();"></div>
         </template>
         <!-- 更多按钮 -->
         <a :href="post.url"
