--- a/page_begin/header.html
+++ b/page_begin/header.html
@@ -7,7 +7,7 @@
         </hgroup>
         <details role="list" style="margin-bottom:0;margin-left:var(--nav-element-spacing-horizontal);">
             <summary aria-haspopup="listbox" role="link">更多</summary>
-            <ul role="listbox" id="navList" v-html="vm.header.navlist"></ul>
+            <ul role="listbox" id="navList" style="z-index: 0;" v-html="vm.header.navlist"></ul>
         </details>
     </nav>
 </template>
